--- a/index.html
+++ b/index.html
@@ -13,51 +13,45 @@
 
 <body>
     <header>
-        <div class="topMenu"><h1>KAAO</h1></div>
+        <div class="topMenu">
+            <img src="./images/headerText.png" alt="">
+        </div>
     </header>
 
     <div class="wrapContainer">
             <a href="article.html" class="news_layer">
-                <div class="news_header">Welcome to articles</div>
-                <img class="news_img" src="./images/test.png" />
+                <div class="news_header">Welcome to articles. Here you see an Example of my article layout.</div>
+                <img class="news_img" src="./images/layoutArt.png" />
+            </a>
+
+            <a href="./projects/PigGame/index.html" class="news_layer">
+                <div class="news_header">Try my PigGame, a Javascript game.</div>
+                <img class="news_img" src="./images/pigGame.png" />
+            </a>
+
+            <a href="./projects/countdownTimer/countdown.html" class="news_layer">
+                <div class="news_header">A Javascript countdown timer.</div>
+                <img class="news_img" src="./images/countDownTimer.png" />
+            </a>
+
+            <a href="./projects/Modal/index.html" class="news_layer">
+                <div class="news_header">Modalbuttons, when clicked rest of the page is out of focus.</div>
+                <img class="news_img" src="./images/ModalButtons.png" />
             </a>
 
             <a href="#" class="news_layer">
-                <div class="news_header">Testin12345678910</div>
-                <img class="news_img" src="./images/test.png" />
-            </a>
-
-            <a href="#" class="news_layer">
-                <img class="news_img" src="./images/test.png" />
-            </a>
-
-            <a href="#" class="news_layer">
-                <img class="news_img" src="./images/test.png" />
-            </a>
-
-            <a href="#" class="news_layer">
-                <img class="news_img" src="./images/test.png" />
-            </a>
-
-            <a href="#" class="news_layer">
-                <img class="news_img" src="./images/test.png" />
-            </a>
-
-            <a href="#" class="news_layer">
-                <img class="news_img" src="./images/test.png" />
+                <div class="news_header">Guess a number! A Javascript game.</div>
+                <img class="news_img" src="./images/guessGame.png" />
             </a>
 
             <a href="#" class="news_layer">
                 <img class="news_img" src="./images/test.png" />
             </a>
 
-            <a href="#" class="news_layer">
-                <img class="news_img" src="./images/test.png" />
-            </a>
     </div>
 
 <footer>
-    123
+    <div>You can reach me on the following channels:</div>
 </footer>
 </body>
 
